# simple_keylogger

./: CMakeLists.txt  keylogger.cpp  keyloggerV2.cpp  main.cpp
server/: entrypoint.py
server/utils/controller/: kl_reception.py  status.py
server/utils/logs/: logger.py
server/utils/logs/key_logger/: key_logger.txt
